--- a/Table/Base.lproj/Main.storyboard
+++ b/Table/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -352,6 +352,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="ZvD-0p-g3u">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TdM-wA-hQc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -468,11 +471,11 @@
             </objects>
             <point key="canvasLocation" x="3954.375" y="-333.80281690140845"/>
         </scene>
-        <!--Item-->
+        <!--Posts-->
         <scene sceneID="Qmp-x7-7SN">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f0O-Q3-ABA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="n3X-CS-ph7"/>
+                    <tabBarItem key="tabBarItem" title="Posts" image="first" id="n3X-CS-ph7"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="m6x-Pt-7QG">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -487,11 +490,11 @@
             </objects>
             <point key="canvasLocation" x="750" y="-352.81690140845069"/>
         </scene>
-        <!--Second-->
+        <!--Groups-->
         <scene sceneID="EEC-AK-OMG">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="13P-L2-Fxd" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Groups" image="second" id="cPa-gy-q4n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JAq-70-iHw">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -508,9 +511,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="first" width="30" height="30"/>
         <image name="second" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JeV-uw-fiO"/>
+        <segue reference="vhA-5i-MYa"/>
     </inferredMetricsTieBreakers>
 </document>
